Refine reserva print layout

--- a/index.html
+++ b/index.html
@@ -951,36 +951,34 @@
                         <div class="print-subtitle">Entregue ao acompanhante</div>
                     </div>
                     <div class="print-ticket-body">
-                        <div class="print-row">
-                            <span>Armário</span>
-                            <strong id="print-armario">-</strong>
+                        <div class="print-highlight-block">
+                            <span class="print-highlight-label">Armário</span>
+                            <div class="print-armario-large" id="print-armario">-</div>
                         </div>
-                        <div class="print-row">
-                            <span>Paciente</span>
-                            <strong id="print-paciente">-</strong>
+                        <div class="print-highlight-block patient">
+                            <span class="print-highlight-label">Paciente</span>
+                            <div class="print-paciente-large" id="print-paciente">-</div>
                         </div>
-                        <div class="print-row">
-                            <span>Acompanhante</span>
-                            <strong id="print-acompanhante">-</strong>
-                        </div>
-                        <div class="print-row">
-                            <span>Prontuário</span>
-                            <strong id="print-prontuario">-</strong>
-                        </div>
-                        <div class="print-row">
-                            <span>Leito</span>
-                            <strong id="print-leito">-</strong>
-                        </div>
-                        <div class="print-row">
-                            <span>Volumes</span>
-                            <strong id="print-volumes">-</strong>
+                        <div class="print-details">
+                            <div class="print-row">
+                                <span>Acompanhante</span>
+                                <strong id="print-acompanhante">-</strong>
+                            </div>
+                            <div class="print-row">
+                                <span>Prontuário</span>
+                                <strong id="print-prontuario">-</strong>
+                            </div>
+                            <div class="print-row">
+                                <span>Leito</span>
+                                <strong id="print-leito">-</strong>
+                            </div>
+                            <div class="print-row">
+                                <span>Volumes</span>
+                                <strong id="print-volumes">-</strong>
+                            </div>
                         </div>
                     </div>
-                    <div class="print-ticket-footer">
-                        <div class="print-meta">
-                            <span>Início</span>
-                            <strong id="print-inicio">-</strong>
-                        </div>
+                    <div class="print-ticket-footer single">
                         <div class="print-meta">
                             <span>Emitido em</span>
                             <strong id="print-emissao">-</strong>
