Ajusta layout do comprovante de guarda-volumes

--- a/index.html
+++ b/index.html
@@ -946,9 +946,7 @@
                 <button class="modal-close" id="impressao-reserva-close" type="button" aria-label="Fechar comprovante">&times;</button>
                 <div class="print-ticket" id="impressao-reserva-card" aria-live="polite">
                     <div class="print-ticket-header">
-                        <div class="print-badge">Guarda Volumes - HUC</div>
-                        <div class="print-title" id="impressao-reserva-titulo">Reserva do armário</div>
-                        <div class="print-subtitle">Entregue ao acompanhante</div>
+                        <div class="print-badge" id="impressao-reserva-titulo">Guarda Volumes - NAC HUC</div>
                     </div>
                     <div class="print-ticket-body">
                         <div class="print-highlight-block">
@@ -965,12 +963,8 @@
                                 <strong id="print-acompanhante">-</strong>
                             </div>
                             <div class="print-row">
-                                <span>Prontuário</span>
-                                <strong id="print-prontuario">-</strong>
-                            </div>
-                            <div class="print-row">
-                                <span>Leito</span>
-                                <strong id="print-leito">-</strong>
+                                <span>Pront/Leito</span>
+                                <strong id="print-prontuario-leito">-</strong>
                             </div>
                             <div class="print-row">
                                 <span>Volumes</span>
