--- a/style.html
+++ b/style.html
@@ -1944,24 +1944,25 @@
             border-color: #c7d2fe;
         }
         .print-highlight-label {
-            font-size: 0.9rem;
-            letter-spacing: 0.06em;
+            font-size: 1.15rem;
+            font-weight: 800;
+            letter-spacing: 0.08em;
             text-transform: uppercase;
-            color: #475569;
+            color: #0f172a;
         }
         .print-armario-large {
-            font-size: 3rem;
-            font-weight: 800;
-            letter-spacing: 0.1em;
+            font-size: 3.6rem;
+            font-weight: 900;
+            letter-spacing: 0.14em;
             color: #0f172a;
             text-align: center;
         }
         .print-paciente-large {
-            font-size: 1.6rem;
-            font-weight: 800;
+            font-size: 2rem;
+            font-weight: 850;
             color: #0f172a;
             text-align: center;
-            line-height: 1.25;
+            line-height: 1.3;
         }
         .print-details {
             display: flex;
