--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <?!= include('style'); ?>
 
 </head>
@@ -991,7 +992,7 @@
                 </div>
                 <div class="modal-actions print-actions">
                     <button type="button" class="btn btn-secondary" id="impressao-reserva-fechar">Fechar</button>
-                    <button type="button" class="btn btn-primary" id="impressao-reserva-print">Imprimir</button>
+                    <button type="button" class="btn btn-primary" id="impressao-reserva-print">Baixar PNG</button>
                 </div>
             </div>
         </div>
